--- a/ConstructionSite/wwwroot/ConstructionAdmin/assets/bootstrap-datetimepicker/sample/index.html
+++ b/ConstructionSite/wwwroot/ConstructionAdmin/assets/bootstrap-datetimepicker/sample/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-    <link href="./bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="~/lib/bootstrap-v4-rtl/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link href="../css/datetimepicker.css" rel="stylesheet" media="screen">
 </head>
 
